<?xml version="1.0"?>
<package format="2">
  <name>horus_bridge</name>
  <version>0.0.1</version>
  <description>The horus_bridge package</description>

  <maintainer email="omotoye.adekoya@edu.unige.it">Omotoye</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>

  <!-- Add other dependencies here -->

</package>
