[package]
name = "horus_tcp_bridge"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1" # For efficient byte-level manipulation
protobuf = "3.4.0"
